--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -49,7 +49,7 @@
 \usepackage[font=small]{caption}
 \usepackage[font=small]{subcaption}
 \def\authnotes{1}
-\newtheorem{thm}{Theorem} %[section]
+\newtheorem{thm}{} %[section]
 \newtheorem*{theorem*}{Theorem}
 \newtheorem{lem}{Lemma}
 
@@ -2223,6 +2223,9 @@
 
 \newcommand{\RSAk}{\textnormal{RSA}\dash k}
 \newcommand{\AdvOWFRSA}[2]{\Adv^{\mathrm{owf}}_{#1}(#2)}
+
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
