--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -49,7 +49,7 @@
 \usepackage[font=small]{caption}
 \usepackage[font=small]{subcaption}
 \def\authnotes{1}
-\newtheorem{thm}{} %[section]
+\newtheorem{thm}{Theorem} %[section]
 \newtheorem*{theorem*}{Theorem}
 \newtheorem{lem}{Lemma}
 
