--- a/notes/ecc/diffiehellman.tex
+++ b/notes/ecc/diffiehellman.tex
@@ -1,6 +1,6 @@
 \subsection{Elliptic Curve Diffie Hellman}
 
-The Elliptic Curve Group can be used to perform Elliptic Curve Diffie Hellman for key exchange \figref{fig:ecdh}. It is very similar to Diffie Hellman just using Elliptic Curve Point operation instead of exponentiation \figref{fig:dh}. The security needed by Elliptic Curve Diffie Hellman is analogous to Computational Diffie Hellman Assumption such that given X and Y one can't learn $xyP$. The best way to solve Elliptic Curve Computational Diffie Hellman is to solve Elliptic Curve Discrete Log Problem which is given X learn x. One of the generic attack against Elliptic Curve Discrete Log Problem is Baby-Step Giant-Step Algorithm.
+The Elliptic Curve Group can be used to perform Elliptic Curve Diffie Hellman for key exchange \figref{fig:ecdh}. It is very similar to Diffie Hellman except that it uses group operation instead of exponentiation \figref{fig:dh}. The security needed by Elliptic Curve Diffie Hellman is analogous to Computational Diffie Hellman Assumption that given X and Y one can't learn $xyP$. The best way to solve Elliptic Curve Computational Diffie Hellman is to solve Elliptic Curve Discrete Log Problem which is given X, compute the value of x. One of the generic attacks against the Elliptic Curve Discrete Log Problem is Baby-Step Giant-Step Algorithm.
 
 \begin{figure}[t]
   \centering
@@ -37,7 +37,7 @@ The Elliptic Curve Group can be used to perform Elliptic Curve Diffie Hellman fo
 \end{figure}
 
 
-\paragraph{Baby-Step Giant-Step Algorithm.} Baby-Step Giant-Step algorithm tries to solve Elliptic Curve Discrete Log Problem, which is given xP for a random x, compute x. The algorithm is shown in \ref{fig:bsgs}. In the algorithm, we take rewrite $x = a*m+b$, then $xP + (-amP) = bP$. We precompute pairs of (b,bP) and then find a for which $xP + (-amP) = bP$, thus return x as $a*m+b$ for corresponding a and b. The worst-case runtime of this algorithm $q^{0.5}$. But the space complexity is also $q^{0.5}$. Pollard Rho method reduces the space complexity to constant. This is the best known attack against Elliptic Curve. This algorithm can also be used against Discrete Log Problem, by just replacing group operation by exponentiation. There are bunch of corner cases for some curves where attacks can be faster.
+\paragraph{Baby-Step Giant-Step Algorithm.} Baby-Step Giant-Step algorithm tries to solve the Elliptic Curve Discrete Log Problem, which is given xP for a random x, compute x. The algorithm is shown in \ref{fig:bsgs}. In the algorithm, we take rewrite $x = a*m+b$, then multiplying it by P, we get $xP + (-amP) = bP$. We precompute pairs of (b, bP) for different values of P. Then find the value of a for which $xP + (-amP) = bP$ and the value of x will be then $a*m+b$ for the given a and b. The worst-case runtime of this algorithm $q^{0.5}$. But the space complexity is also $q^{0.5}$. Pollard Rho method reduces the space complexity to constant. This is the best-known attack against Elliptic Curve. This attack can also be used against Discrete Log Problem, by just replacing group operation by exponentiation. There are, however, a bunch of corner cases for some curves where attacks can be faster.
 
 
 \begin{algorithm}
@@ -58,7 +58,7 @@ The Elliptic Curve Group can be used to perform Elliptic Curve Diffie Hellman fo
 \end{algorithmic}
 \end{algorithm}
 
-\paragraph{Point Compression.} Any point x has exactly 0 or 2 solution to the curve equation. Also, the two solution are symmetric against x-axis. Thus, we can reduce the space to represent the points in Elliptic Curve by just representing x and a bit 0 or 1 to represent the y. This reduces the space complexity by factor of 2.
+\paragraph{Point Compression.} Any point x has exactly 0 or 2 solutions to the curve equation. Also, the two solutions are symmetric against x-axis. Thus, we can reduce the space to represent the points in Elliptic Curve by just representing x and a bit 0 or 1 to represent y. This reduces the space complexity by a factor of 2.
 
 \subsection{Summary}
-Elliptic Curve are specially constructed groups where Discrete Log Problem is conjectured to be hard. These group operations are faster than RSA or Diffie Hellman over $Z_p$. These are increasingly used in practice and are being adopted where Discrete Log Property is required for security, eg Signing Algorithm(EC-DSA algo) etc.
+Elliptic Curves are specially constructed groups where Discrete Log Problem is conjectured to be hard. These group operations are faster than RSA or Diffie Hellman over $Z_p$. These are increasingly used in practice and are being adopted where Discrete Log Property is required for security, eg Signing Algorithm(EC-DSA algorithm), etc.
