Finished hashfunction writeup

--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -469,3 +469,41 @@ url={http://csrc.nist.gov/nissc/1997}
     pages = {487--506}
 }
 
+@InProceedings{biryukov2009related,
+    title={Related-key cryptanalysis of the full AES-192 and AES-256},
+    author={Biryukov, Alex and Khovratovich, Dmitry},
+    booktitle={International Conference on the Theory and Application of Cryptology and Information Security},
+    pages={1--18},
+    year={2009},
+    organization={Springer}
+}
+
+@InProceedings{wang2005finding,
+    title={Finding collisions in the full SHA-1},
+    author={Wang, Xiaoyun and Yin, Yiqun Lisa and Yu, Hongbo},
+    booktitle={Annual international cryptology conference},
+    pages={17--36},
+    year={2005},
+    organization={Springer}
+}
+
+@inproceedings{wang2005break,
+    title={How to break MD5 and other hash functions},
+    author={Wang, Xiaoyun and Yu, Hongbo},
+    booktitle={Annual international conference on the theory and applications of cryptographic techniques},
+    pages={19--35},
+    year={2005},
+    organization={Springer}
+}
+
+
+@inproceedings{stevens2017first,
+    title={The first collision for full SHA-1},
+    author={Stevens, Marc and Bursztein, Elie and Karpman, Pierre and Albertini, Ange and Markov, Yarik},
+    booktitle={Annual International Cryptology Conference},
+    pages={570--596},
+    year={2017},
+    organization={Springer}
+}
+
+
