--- a/notes/pke2.tex
+++ b/notes/pke2.tex
@@ -28,39 +28,39 @@ Let $p$ be a large prime number. We fix the group $\group = \Z_p^*=\{1,2,3,\ldot
 	\end{center}
 \end{example}
 
-\begin{figure}
+\scribenote{The notes fix G but then the protocol shown generalizes G. In the protocol, should I just use $\Z_p^*$?}
+
+\begin{figure}[H]
 	\center
 	\begin{tikzpicture}
-		\node (rect1) [draw]  {
-			\begin{minipage}[t][4cm]{2cm}
-				{\centering\underline{\textbf{Alice}} \\}
-				$x \getsr \Z_{|\group|}$ \\
-				$X \gets g^x$
-			\end{minipage}
-		};
-		\node (rect2) [draw, right of=rect1, node distance=6cm] {
-			\begin{minipage}[t][4cm]{2cm}
-				{\centering\underline{\textbf{Bob}} \\}
-				$y \getsr \Z_{|\group|}$ \\
-				$Y \gets g^y$
-			\end{minipage}
-		};
-		\node (group1) [above of=rect1, node distance=3cm] {$\group,g$};
-		\node (group2) [above of=rect2, node distance=3cm] {$\group,g$};
-		\path[->,>=stealth'] (group1) edge (rect1);
-		\path[->,>=stealth'] (group2) edge (rect2);
-		
-		\path[->,>=stealth'] (rect1.10) edge node[anchor=south] {$X$} ( rect2.west|-rect1.10); 
-		\path[<-,>=stealth'] (rect1.-40) edge node[anchor=south] {$Y$} (rect2.west|-rect1.-40);
-
-		\node (key1) at (0,-1.75) {$K \gets \hash(Y^x)$};
-		\node (key2) at (6,-1.75) {$K \gets \hash(X^y)$};
+	\node (rect1) [draw]  {
+		\begin{minipage}[t][4cm]{2cm}
+		{\centering\underline{\textbf{Alice}} \\}
+		$x \getsr \Z_{|\group|}$ \\
+		$X \gets g^x$
+		\end{minipage}
+	};
+	\node (rect2) [draw, right of=rect1, node distance=6cm] {
+		\begin{minipage}[t][4cm]{2cm}
+		{\centering\underline{\textbf{Bob}} \\}
+		$y \getsr \Z_{|\group|}$ \\
+		$Y \gets g^y$
+		\end{minipage}
+	};
+	\node (group1) [above of=rect1, node distance=3cm] {$\group,g$};
+	\node (group2) [above of=rect2, node distance=3cm] {$\group,g$};
+	\path[->,>=stealth'] (group1) edge (rect1);
+	\path[->,>=stealth'] (group2) edge (rect2);
+	
+	\path[->,>=stealth'] (rect1.10) edge node[anchor=south] {$X$} ( rect2.west|-rect1.10); 
+	\path[<-,>=stealth'] (rect1.-40) edge node[anchor=south] {$Y$} (rect2.west|-rect1.-40);
+	
+	\node (key1) at (0,-1.75) {$K \gets \hash(Y^x)$};
+	\node (key2) at (6,-1.75) {$K \gets \hash(X^y)$};
 	\end{tikzpicture}
 	\caption{The Diffie-Hellman anonymous key exchange protocol for cyclic group $\group$ with generator $g$.}
 	\label{fig:DHKE}
 \end{figure}
-
-\scribenote{The notes fix G but then the protocol shown generalizes G. In the protocol, should I just use $\Z_p^*$?}
 
 \paragraph{Diffie-Hellman key exchange.} We now describe the details of the Diffie-Hellman anonymous key exchange protocol. We assume both parties have access to public values $\group$ and $g\in\group$. It executes as follows, as shown in \figref{fig:DHKE}:
 \begin{enumerate}
