--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -52,6 +52,7 @@
 \newtheorem{thm}{Theorem} %[section]
 \newtheorem*{theorem*}{Theorem}
 \newtheorem{lem}{Lemma}
+\newtheorem*{lemma*}{Lemma}
 
 \newtheorem{cor}[thm]{Corollary}
 \newtheorem{propo}[thm]{Proposition}
@@ -756,7 +757,7 @@
  \newcommand{\Enc}{\procfont{Enc}}
 
  \newcommand{\Ectxtspace}{\calC}
- \newcommand{\coinspace}{\calR}
+% \newcommand{\coinspace}{\calR}
  \newcommand{\ctxtspacebar}{\overline{\calC}}
  \newcommand{\Frank}{\calF}
  \newcommand{\metadata}{\text{MD}}
@@ -1369,7 +1370,6 @@
 
 \newcommand{\AdvOr}{\calA_\textrm{OR}}
 \newcommand{\AdvCoins}{\calA_\textrm{\$\$}}
-\newcommand{\coins}{\omega}
 \newcommand{\Zp}{\mathbb{Z}_p}
 \newcommand{\bbG}{\mathbb{G}}
 \newcommand{\group}{\bbG}
@@ -2245,7 +2245,25 @@
 \newcommand{\HashSim}{\textnormal{HSim}}
 \newcommand{\SignSim}{\textnormal{SignSim}}
 
+
+\newcommand{\IDscheme}{\textsf{ID}}
+\newcommand{\IDkeygen}{\textsf{kg}}
+\newcommand{\IDkg}{\textsf{IDkg}}
+\newcommand{\IDcom}{P.com}
+\newcommand{\IDresp}{P.resp}
+\newcommand{\IDver}{V.ver}
+\newcommand{\IDchalset}{\calC}
+
+
+\newcommand{\IDPASS}{\textnormal{IDPASS}}
+
+\newcommand{\queried}{\textsf{queried}}
+
+\newcommand{\AdvIDPASS}[2]{\Adv^{\mathrm{idpass}}_{#1}(#2)}
 %\newcommand{\ver}{{\mathsf{ver}}}
+
+\newcommand{\coins}{\omega}
+\newcommand{\CoinSpace}{\Omega}
 
 %%% Local Variables:
 %%% mode: latex
