--- a/notes/main.tex
+++ b/notes/main.tex
@@ -137,11 +137,11 @@
 \newpage
 \input{pke}
 \newpage
+\input{pke2}
+\newpage
 \input{ecc/ecc_main}
 \newpage
 \input{pke-cca}
-%\newpage
-%\input{pke2}
 \newpage
 \input{digsigs}
 \newpage
