added Apr 22 slides

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -1252,7 +1252,7 @@
 \newcommand{\TPgen}{G}
 \newcommand{\TPf}{F}
 \newcommand{\TPinv}{\overline{F}}
-\newcommand{\Gen}{\mathcal{G}}
+%\newcommand{\Gen}{\mathcal{G}}
 
 \newcommand{\Pibar}{{\overline{\Pi}}}
 \newcommand{\kgbar}{{\overline{\kg}}}
@@ -2264,6 +2264,12 @@
 
 \newcommand{\coins}{\omega}
 \newcommand{\CoinSpace}{\Omega}
+
+
+\newcommand{\NIZK}{\textnormal{NIZK}}
+\newcommand{\Gen}{\textsf{Gen}}
+\newcommand{\Simu}{\textsf{Sim}}
+\newcommand{\ProofOracle}{\textnormal{Prove}}
 
 %%% Local Variables:
 %%% mode: latex
