--- a/notes/idprots.tex
+++ b/notes/idprots.tex
@@ -144,3 +144,71 @@ Then we give an $\DL_G$-adversary $\advB$ such that
 Adversary~$\advB$ runs in time at most twice that of the sum of the running time
 of~$\advA$ and $\bigO(q_h+q_s)$.
 \end{theorem*}
+
+\subsection{Sigma Protocol and Schnorr Signatures}
+
+(Variant of) Schnorr Signatures.
+We will be proving the security of Schnorr signatures. 
+
+We have a group of prime order $q$. Let $g$ be a generator $sk = x$ chosen randomly from $Z_q$. Fragility issue: re-using same randomness allows us to easily recover the secret key $x$ by solving two linear equations of $M\neq M'$.
+The core security analysis intuition is that the forger can be turned into DL solver by getting the forget to twice forge on the same R, different C. Re-run the adversary twice to cause a discrete log solution from any UF-CMA adversary (cf. 2:06PM).
+
+Closely related primitive in identification protocols. Schnorr sigma protocol. The idea is that you have a prover, a client that wants to convince a verifier that they have a secret key $x$. Ostensibly this is named as such because a capital sigma looks like a depiction of a three-round protocol. If the client doesn't know $x$, they shouldn't be able to answer the challenge correctly.
+
+Similar structure between the two. A Fiat-Shamir transform can take an identification protocol (sigma) and turn it into a digital signature scheme (signing a message and outputting a signature). Apply this transform to generate $c$ non-interactively. Class question:
+Is there a scheme from discrete-log that is tight?
+Recently solved open question (build a different scheme that is tight). \scribenote{homework problem?}
+
+Analysis game plan for Schnorr:
+Formalize ID protocols and their security under \emph{passive attacks}. Prove Schnorr ID protocol secure: this requires the so-called \emph{rewinding lemma} (run an adversary twice on related randomness, likely to succeed twice). It also uses the fact that the Schnorr protocol is \emph{honest-verifier zero-knowledge}.
+
+Prove that Schnorr signature UF-CMA implied by Schnorr ID passive attack security. Formalizing more carefully what passive attacks. Three abstract algorithms prover's commitment algorithm (P.com), challenge set C, prover's response algorithm (P.resp), verifier's verification algorithm (V.ver).
+
+Want to prove ID security under passive attacks (IDPASS) for Schnorr. Generate a bunch of transcripts that the adversary gets access to. A transcript is (R - commitment, c - challenge, z). Adversary gets a single attempt to impersonate the prover. 2:20pm. Prover gets the public key and transcripts and $q_{id}$ honest executions. Assume we have an adversary A . Can we recover $x$ from $X$? Adversary B that can use impersonator A to recover $x$ via solving discrete log problem. We need to supply the $q_{id}$ transcripts. Need to simulate these transcripts and somehow need to run A twice intuitively to get two transcripts with different c* values. Can we simulate Ri, ci, zi because Schnorr is zero-knowledge and by our ZK scheme we do not need to possess the secret key to simulate the tuple. Build discrete-log (DL) adversary that runs a twice to get two transcripts that allow extracting sk = x.
+How can we create believable transcripts without the secret key? 
+Recall that a real transcript requires:
+identically distributed triple without knowing $x$?
+$g^r$, $c$, $z = cx + r$.
+First idea: pick random $g^r$, $c$, $z$. But $z$ is independent of the other two. doesn't satisfy with probability 1 over the entire group. 
+The real tuples only have two random values and one determined by $x$. We won't pass public verifier since we don't know $x$.
+What else can we do to make a believable transcript? We do know $X$. Pick random $c$, random $z$, then calculate $g^r$ using those, as we have inverted the order that we select things.
+$R = g^z * X^{-c}$, so $R(x^c) = g^z$ and $g^z * $
+
+This is without loss given the same distribution and the equations check out, given that we had $X$. Anybody can generate a transcript without knowing $x$. This is an intentional part of the zero-knowledge aspect of this proof. But we can leverage this fact to make our believable transcripts. In actual deployment, however, you can't choose R is a function of c. This ordering in deployment is critical for security. This is why it is called a commitment, to pick R before seeing c. This will still suffice for the purposes of our reduction.
+
+Revisit our attack plan. We need to observe two forgeries -- rewind the adversary to the point after they query R* and re-run from there with a different c* value.
+Reduction from IDPASS to Discrete Log (DL).
+
+B(x):
+First generate our trick transcript without $x$ by picking $z$, $c$ first and computing $r$. Then run a once to get $z*$, then rewind to get a fresh $z**$ only difference is the different challenge value. Intuitively $c*=c**$ has very low probability. 
+
+How do we lower bound the probability that A succeeds twice? Key analysis captured by rewinding lemma (aka reset lemma):
+If the runs were completely independent (IID), epsilon squared, but they are not here (2:40pm, 2:44pm).
+Same coins (w) on both runs, made A deterministic up until it queries Ver.
+Lemma. Let S and T be finite, non-empty sets and let f: S x t -> {0, 1} be a function. Let X, Y, Y' be independent random variables, with X taking values in S and Y, Y' being uniformly chosen from T. Let Pr[f(X,Y) = 1] = epsilon.
+
+f is the success predicate over the set of coins/commitment value (2:45pm).
+Then Pr[f(X,Y) = 1 (this is c*) \^ f(X,Y') = 1 (c**) \^ Y neq Y'] ge epsilon sq - (epsilon over absolute val of T).
+\scribenote{Prove the lemma as a homework problem?}
+
+See IDPASS security of Schnorr from slides (2:50pm).
+Theorem. Let G by a cyclic group, $q_{id} \ge 0$, and A be an IDPASS - adversary for the Schnorr scheme ID built using G. Then we give an $DL_G$-adversary B such that
+...
+lower bounded by $\epsilon^2 - \frac{\epsilon}{|G|} \ge ()$.
+Exercise for the readers to do algebra. 
+We've proven Schnorr ID protocols are secure under DL passive attack security. Still need (2:55pm).
+Prove security of fiat-shamir's output which is this security ... under UF-CMA.
+We want to show any adversary UF-CMA against Schnorr we can convert the passive attack adversary against Schnorr protocols.
+Going to use the fact that it's RO to generate c values for the adversary A. UF-CMA to IDPASS reduction. The idea is:
+IDPASS adversary B that runs A:
+\begin{enumerate}
+    \item Guess RO query i* corresponds to forgery, query ver to set H[Mi*] = c*. Can embed challenge point in RO output.
+    \item use ci values as response to other RO queries.
+    \item Use (Ri, ci, zi) to simulate signing queries
+\end{enumerate}
+
+Simulates A's environment perfectly if i* guess correct and no commitments R collide with previous H queries.
+We succeed if i* is correct.
+Putting it all together: UF-CMA to DL.
+Theorem statement: let $G$ be a cyclic group and DS be the Schnorr digital signature scheme using random oracle... (3:02pm - ``subtle detail'' 3:03pm.)
+Group size should be roughly twice that of bits of security needed. 256 bit group for 128 bit security...
